syntax = "proto3";

package resources.jobs;

import "resources/filestore/file.proto";
import "resources/jobs/labels.proto";
import "resources/timestamp/timestamp.proto";
import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/gen/go/proto/resources/jobs;jobs";

message Colleague {
  int32 user_id = 1 [(validate.rules).int32.gt = 0]; // @gotags: alias:"id"
  optional string identifier = 2 [(validate.rules).string.max_len = 64];
  string job = 3 [(validate.rules).string.max_len = 20];
  optional string job_label = 4 [(validate.rules).string.max_len = 50];
  int32 job_grade = 5 [(validate.rules).int32.gt = -1];
  optional string job_grade_label = 6 [(validate.rules).string.max_len = 50];
  string firstname = 7 [(validate.rules).string = {
    min_len: 1,
    max_len: 50
  }];
  string lastname = 8 [(validate.rules).string = {
    min_len: 1,
    max_len: 50
  }];
  string dateofbirth = 9 [(validate.rules).string.len = 10];
  optional string phone_number = 12 [(validate.rules).string.max_len = 20];
  optional resources.filestore.File avatar = 17;
  JobsUserProps props = 18; // @gotags: alias:"jobs_user_props"
  // @sanitize: method=StripTags
  optional string email = 19 [(validate.rules).string = {min_len: 6, max_len: 80}];
}

message JobsUserProps {
  int32 user_id = 1 [(validate.rules).int32.gt = 0];
  string job = 2 [(validate.rules).string.max_len = 20];
  optional resources.timestamp.Timestamp absence_begin = 3;
  optional resources.timestamp.Timestamp absence_end = 4;
  // @sanitize: method=StripTags
  optional string note = 5;
  optional Labels labels = 6;
  optional string name_prefix = 7 [(validate.rules).string.max_len = 12];
  optional string name_suffix = 8 [(validate.rules).string.max_len = 12];
}

enum JobsUserActivityType {
  JOBS_USER_ACTIVITY_TYPE_UNSPECIFIED = 0;
  JOBS_USER_ACTIVITY_TYPE_HIRED = 1;
  JOBS_USER_ACTIVITY_TYPE_FIRED = 2;
  JOBS_USER_ACTIVITY_TYPE_PROMOTED = 3;
  JOBS_USER_ACTIVITY_TYPE_DEMOTED = 4;
  JOBS_USER_ACTIVITY_TYPE_ABSENCE_DATE = 5;
  JOBS_USER_ACTIVITY_TYPE_NOTE = 6;
  JOBS_USER_ACTIVITY_TYPE_LABELS = 7;
  JOBS_USER_ACTIVITY_TYPE_NAME = 8;
}

message JobsUserActivity {
  uint64 id = 1 [jstype = JS_STRING]; // @gotags: sql:"primary_key" alias:"id"
  optional resources.timestamp.Timestamp created_at = 2;
  string job = 4 [(validate.rules).string.max_len = 20];
  int32 source_user_id = 5 [(validate.rules).int32.gt = 0];
  Colleague source_user = 6; // @gotags: alias:"source_user"
  int32 target_user_id = 7 [(validate.rules).int32.gt = 0];
  Colleague target_user = 8; // @gotags: alias:"target_user"
  JobsUserActivityType activity_type = 9;
  // @sanitize
  string reason = 10 [(validate.rules).string.max_len = 255];
  JobsUserActivityData data = 11;
}

message JobsUserActivityData {
  oneof data {
    ColleagueAbsenceDate absence_date = 1;
    ColleagueGradeChange grade_change = 2;
    ColleagueLabelsChange labels_change = 3;
    ColleagueNameChange name_change = 4;
  }
}

message ColleagueAbsenceDate {
  resources.timestamp.Timestamp absence_begin = 1;
  resources.timestamp.Timestamp absence_end = 2;
}

message ColleagueGradeChange {
  int32 grade = 1;
  string grade_label = 2;
}

message ColleagueLabelsChange {
  repeated Label added = 1;
  repeated Label removed = 2;
}

message ColleagueNameChange {
  optional string prefix = 1;
  optional string suffix = 2;
}
